# network-share-test-helper

./: .gitignore  README.md  create_dirs.py  dfs_nfs_analyzer.py  env.template  main.py  manuf  pyproject.toml  requirements.txt  setup.py  temp.md  test-requirements.txt  update.py  version_check.py
docs/: CONFIGURATION.md  CONTEXT.md  DEPENDENCIES.md  GUIDE.md  PROJECT_STRUCTURE.md  RESOURCE_MANAGEMENT.md  TRACKING.md  temp.md
logs/: README.md
output/: README.md
scripts/: install_windump.ps1  update.py
src/: main.py
src/analyzers/: ml_analyzer.py  share_analyzer.py
src/detectors/: issue_detector.py  performance_optimizer.py
src/metrics/: network_metrics.py  protocol_info.py
src/utils/: cleanup.py  cli.py  logging.py  network_utils.py  platform_utils.py  system_info.py  windows_utils.py
src/utils/version/: checker.py  updater.py
tests/: test_integration.py  test_network_metrics.py  test_platform_utils.py
tests/test_analyzers/: test_ml_analyzer.py
tests/test_utils/: test_cleanup.py  test_cli.py  test_network_utils.py  test_platform_utils.py
