[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.41.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dfs-nfs-debugger"
version = "1.3.0"
description = "A powerful DFS/NFS debugging utility with ML capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Codeium", email = "support@codeium.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/dfs-nfs-debugger"
Documentation = "https://github.com/yourusername/dfs-nfs-debugger/docs"
Repository = "https://github.com/yourusername/dfs-nfs-debugger.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dfs-nfs-analyzer = "main:main"
dfs-nfs-update = "scripts.update:main"
